Added some tests for auth api cases.
